// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`join up with last list item in a flat list 1`] = `
[
  {
    "attrs": {
      "listType": "",
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "Hello",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "World",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "bulletList",
  },
]
`;

exports[`join up with last list item in a nested list 1`] = `
[
  {
    "attrs": {
      "listType": "",
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "Hello",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "World",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
          {
            "attrs": {
              "listType": "",
            },
            "content": [
              {
                "content": [
                  {
                    "content": [
                      {
                        "text": "Hello",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "listItem",
              },
              {
                "content": [
                  {
                    "content": [
                      {
                        "text": "World",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                  {
                    "attrs": {
                      "listType": "",
                    },
                    "content": [
                      {
                        "content": [
                          {
                            "content": [
                              {
                                "text": "Hello",
                                "type": "text",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "type": "listItem",
                      },
                    ],
                    "type": "bulletList",
                  },
                ],
                "type": "listItem",
              },
              {
                "content": [
                  {
                    "content": [
                      {
                        "text": "A very nested world",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "listItem",
              },
            ],
            "type": "bulletList",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "bulletList",
  },
]
`;

exports[`join up with last list item in a nested list 2`] = `
[
  {
    "attrs": {
      "listType": "",
    },
    "content": [
      {
        "content": [
          {
            "content": [
              {
                "text": "Hello",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "listItem",
      },
      {
        "content": [
          {
            "content": [
              {
                "text": "World",
                "type": "text",
              },
            ],
            "type": "paragraph",
          },
          {
            "attrs": {
              "listType": "",
            },
            "content": [
              {
                "content": [
                  {
                    "content": [
                      {
                        "text": "Hello",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "listItem",
              },
              {
                "content": [
                  {
                    "content": [
                      {
                        "text": "World",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                  {
                    "attrs": {
                      "listType": "",
                    },
                    "content": [
                      {
                        "content": [
                          {
                            "content": [
                              {
                                "text": "Hello",
                                "type": "text",
                              },
                            ],
                            "type": "paragraph",
                          },
                        ],
                        "type": "listItem",
                      },
                    ],
                    "type": "bulletList",
                  },
                ],
                "type": "listItem",
              },
              {
                "content": [
                  {
                    "content": [
                      {
                        "text": "A very nested world",
                        "type": "text",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "type": "listItem",
              },
            ],
            "type": "bulletList",
          },
        ],
        "type": "listItem",
      },
    ],
    "type": "bulletList",
  },
]
`;
